--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ owner:
     ad-slot: 
   bing-verify: 
   github: Martaver
-  stackoverflow: http://stackoverflow.com/users/535930/martaver
+  stackoverflow: 535930/martaver
   linkedin: #username
   xing: #username
   instagram: #username
