Adding diqus account.

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ owner:
   avatar: The_Morning_After_by_hiddenmoves.jpg
   bio: "An Aussie coder in Helsinki."
   email: 
-  disqus-shortname: 
+  disqus-shortname: martaver
   twitter: #username
   facebook: #username
   google:
