--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ kramdown:
 owner:
   name: Sebastian Nemeth
   avatar: The_Morning_After_by_hiddenmoves.jpg
-  bio: "An Aussie coder in Helsinki."
+  bio: "An Aussie coder holed up in Helsinki."
   email: 
   disqus-shortname: martavergithubio
   twitter: #username
