--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site wide configuration
 
-title:            [Tech]::Braindump
+title:            '[Tech]::Braindump'
 locale:           en_US
 url:              
 
