--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ google_ad_slot           :
 author:
   name             : "Sebastian Nemeth"
   avatar           : "The_Morning_After_by_hiddenmoves.jpg"
-  bio              : "I'm an Aussie coder who ventured out and found love in Helsinki. Here, I'm an entrepreneurial repeat offender, trying to find the elusive middle ground between branding, concept design and software development."
+  bio              : "I'm an Aussie full-stack coder holed up in Helsinki. Here, I'm an entrepreneurial repeat offender, trying to find the elusive middle ground between branding, concept design and software development."
   location         : "Helsinki, Finland"
   email            :
   uri              :
@@ -83,7 +83,7 @@ author:
   linkedin         :
   pinterest        :
   soundcloud       :
-  stackoverflow    : 525930/martaver
+  stackoverflow    : 535930/martaver
   steam            :
   tumblr           :
   twitter          :
