Split 'tend & befriend' blog post into a shorter read 6 mins.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
-  - title: "Code"
-    url: /
-
-  - title: "Projects"
-    url: /
+#  - title: "Code"
+#    url: /
+#
+#  - title: "Projects"
+#    url: /
