--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ social:
 analytics:
   provider               : false # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :
+    tracking_id          : UA-81469553-1
 
 # Google AdSense
 google_ad_client         :
