--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "custom"
+  provider               : google # false (default), "google", "google-universal", "custom"
   google:
     tracking_id          : UA-81469553-1
 
