Switched name to Monk/mage.

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "Good Pilgrim"
+title                    : "Monk/mage"
 title_separator          : "-"
 name                     : "Sebastian Nemeth"
 description              : "On a pilgrimage through the deep and high."
